# AI-Engineers

./: .env.development  .env.production  .env.testing  .gitignore  CHANGELOG.md  README.md  Readme.md  app.py  conftest.py  docker-compose.yml  jest.config.js  models.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.ci/: docker-pipeline.yml
auth/: __init__.py  login.py
ci_cd/jenkins/: Jenkinsfile
configurations/: baseConfig.json
coverage/: lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/authentication/: UserService.js.html  app.js.html  index.html
coverage/lcov-report/payment/: PaymentProcessor.js.html  app.js.html  index.html
deployment/: docker-compose.yml
docs/: DeploymentGuide.md  auth_api_docs.md  technical_debt.md  technical_debt_review.md
infra/: docker-compose.yml
infra/aws/: __init__.py  ecs.tf  ecs_rds.py  main.tf  monitoring.tf  outputs.tf  rds.tf  variables.tf  vpc.tf  vpc_provisioner.py
infra/nginx/: nginx.conf
instance/: app.db
microservices/auth_service/: Dockerfile  config.py  main.py  requirements.txt
microservices/auth_service/controllers/: LoginController.py
microservices/auth_service/tests/: test_jwt_util.py  test_login_controller.py
microservices/auth_service/utils/: jwt_util.py
scripts/deployment/: build_scripts.sh
services/: data_access_layer.py
services/authentication/: Dockerfile  authentication.py  config.py  models.py  oauth.py  pyproject.toml  requirements.txt  token_store.py  user_auth_service.py  user_repository.py
services/authentication/tests/: __init__.py  test_authentication.py  test_user_auth_service.py
services/client_management/: __init__.py  pyproject.toml
services/client_management/src/client_management/: __init__.py
services/client_management/src/client_management/application/use_cases/: __init__.py
services/client_management/src/client_management/domain/entities/: __init__.py
services/client_management/src/client_management/domain/repositories/: __init__.py
services/client_management/src/client_management/infrastructure/: __init__.py
services/client_management/src/client_management/presentation/: __init__.py
services/client_management/src/client_management/presentation/api/: __init__.py
services/loan_management/: __init__.py  app.py  main.py  pyproject.toml  repository.py
services/loan_management/src/loan_management/: __init__.py
services/loan_management/src/loan_management/application/: __init__.py
services/loan_management/src/loan_management/application/use_cases/: __init__.py
services/loan_management/src/loan_management/domain/: __init__.py
services/loan_management/src/loan_management/domain/entities/: __init__.py
services/loan_management/src/loan_management/presentation/api/: __init__.py
services/loan_management/tests/: test_loan_controller.py
services/payment_microservice/: processor.py
services/payment_microservice/tests/: test_processor.py
services/security_platform/: auth_middleware.py  main.py  pyproject.toml  requirements.txt
services/security_platform/tests/: test_auth_controller.py  test_auth_middleware.py  test_integration.py
services/security_platform/utils/: jwt_util.py
services/tests/: test_data_access_layer.py
services/tests/integration/: test_auth_integration.py  test_authentication_flow_it.py  test_loan_integration.py
src/: ConfigLoader.ts  index.ts
src/auth/: AuthModule.ts
src/config/: serverConfig.ts
src/controllers/: AuthController.py
src/handlers/: RequestHandler.ts
src/main/java/com/zcloud/platform/model/: LoanApplication.java
src/main/java/com/zcloud/platform/util/: JwtUtil.java  LoanCalculator.java  LoanValidator.java  SecurityUtils.java
src/microservices/auth/: api_gateway.py  user_sessions.py
src/microservices/authentication/: UserService.js  app.js
src/microservices/authentication/__tests__/: UserService.test.js
src/microservices/integration/: auth-payment.integration.test.js
src/microservices/payment/: PaymentProcessor.js  app.js
src/microservices/payment/__tests__/: PaymentProcessor.test.js
src/middleware/: LoggingMiddleware.ts  TokenMiddleware.py
src/security/: SecurityModule.ts
src/test/java/com/zcloud/platform/: LoanApplicationModulesTest.java
src/tests/: SecurityModule.test.ts
tests/aws/: networking_test.py
tests/integration/: TokenMiddlewareIntegrationTest.py  test_loan_repayment_processing.py
tests/integration/auth/: test_rbac.py
tests/integration/aws/: ecs_rds_integration_test.py
tests/unit/: AuthControllerTest.py  test_loan_application_service.py
tests/unit/auth/: test_login.py
(+3 files in other folders)
