[tool.poetry]
name = "natanael-microservices"
version = "0.1.0"
description = "Microservices architecture migration from legacy Java monolith to Python"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
black = "^24.0"
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.9"
boto3 = "^1.34"
moto = {version = "^5.0", extras = ["ec2", "ecs", "rds"]}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["services", "microservices", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib --cov=services --cov=microservices --cov=auth --cov-report=term-missing"
