[tool.poetry]
name = "authentication-service"
version = "0.1.0"
description = "Authentication microservice with JWT and OAuth2 support"
authors = []
packages = [{ include = "authentication", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
PyJWT = "^2.8.0"
requests = "^2.32.3"
gunicorn = "^22.0.0"
redis = { version = "^5.0.7", optional = true }

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
