[tool.poetry]
name = "client-management-service"
version = "0.1.0"
description = "Client management microservice handling client profiles and interactions"
authors = []
packages = [{ include = "client_management", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = "^2.7"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
